feat: manager realm
